source/scss/module/_blocks.scss
.block {
  margin-bottom: 5rem;
  position: relative;

  @include lg-screen() {
    margin-bottom: 6rem;
  }
}
.hero {
  overflow: hidden;
  z-index: 1;

  .home & {
    margin: 0 auto 4rem;
    max-width: 250px;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 3rem 0;

    h1 {
      text-align: center;

      span {
        display: block;
        line-height: 0.9;

        &:first-child {
          font-size: 29px;
          font-weight: 600;
        }
        &:nth-child(2) {
          font-size: 47px;
          font-weight: 200;
        }
        &:last-child {
          font-size: 50px;
          font-weight: 400;
          letter-spacing: 0.06em;
        }
      }
    }

    & > div {
      text-align: center;
      img {
        margin: 0 auto;
      }
    }

    @include lg-screen() {
      margin: 0 auto 8rem;
      max-width: calc(992px + 4rem);

      .row {
        display: flex;
        align-items: center;
        justify-content: center;

        h1 {
          width: 50%;
        }
      }

      .logo {
        grid-column: 1 / 3;
      }

      & > div {
        grid-column: 1 / 3;
      }
    }
  }
}

.page-title {
  padding-top: 3.75rem;
  text-align: center;

  h1 {
    margin: 0;
  }

  p {
    font-style: italic;
  }

  @include lg-screen() {
    margin-bottom: 4rem;
    text-align: left;
  }
}
.page-intro {
  .container {
    .content {
      max-width: 675px;
    }
  }
}
.cta {
  border: 2px solid $clr1;
  border-radius: 5px;
  margin: 0 auto 6rem;
  max-width: 1000px;
  padding: 2rem 0;

  h2 {
    font-style: italic;
  }

  a {
    font-weight: bold;
  }

  .image {
    display: none;
  }

  // @include xl-screen() {
  //   background-color: transparent;
  //
  //   .container {
  //     max-width: 80%;
  //     background-color: $clr-white;
  //     display: grid;
  //     grid-template: 1fr / auto 528px 528px;
  //     grid-column-gap: 4rem;
  //     margin: 0;
  //     padding: 0;
  //
  //     .content {
  //       grid-column: 2;
  //       display: flex;
  //       justify-content: center;
  //       flex-direction: column;
  //     }
  //     .image {
  //       background-color: $clr-white;
  //       border-right: 10px solid $clr1;
  //       display: block;
  //       grid-column: 3;
  //     }
  //   }
  // }
}
.special {
  background-color: $clr-white;
  padding: 4rem 0;

  @include lg-screen() {
    background: $clr-white url(/assets/img/bg-organic1.svg) 25%/30% no-repeat;
  }
}

.portfolio-card {
  color: $clr-text;
  padding-bottom: 0;
  padding-top: 0;

  & > img {
    width: 100%;
  }
  .icons {
    margin-bottom: 2rem;
  }
  .info {
    h3 {
      text-align: center;
    }
    p {
      margin: 0;
    }
    ul {
      margin: 0;
      padding: 0 20px;
    }
  }

  @include lg-screen() {
    display: grid;
    grid-template: auto / 25% 60% 15%;
    grid-template-areas: "image content icons";
    position: relative;
    .image {
      margin: 0;
    }
    .info {
      align-items: center;
      grid-area: content;
      padding-left: 2rem;

      h3 {
        margin: 1rem 0;
        text-align: left;
      }
    }
    .icons {
      align-items: flex-end;
      flex-direction: column;
      grid-area: icons;
      justify-content: flex-end;
      padding: 0 1rem 1rem 0;
      margin-bottom: 0;

      img:not(:last-child) {
        margin-bottom: 1rem;
        margin-right: 0;
      }
    }
    .button-group {
      align-items: flex-end;
      bottom: 1rem;
      grid-area: content;
      grid-area: image;
      justify-content: center;
      left: 0;
      margin: auto;
      padding: 0;
      position: absolute;
      right: 0;
    }
  }
}

.portfolio-content {
  @include lg-screen() {
    display: grid;
    grid-template: 1fr / 47.5% 47.5%;
    grid-gap: 5%;
  }
}

.portfolio-hero {
  img {
    width: 100%;
  }
  .image {
    position: relative;
    margin: 0 auto 4rem;
  }

  .portfolio-image-desktop {
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
    overflow: hidden;
    max-height: 52vw;
  }
  .portfolio-image-mobile {
    bottom: -2rem;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    max-height: 44vw;
    max-width: 20vw;
    overflow: hidden;
    position: absolute;
    right: 5vw;
  }

  @include xl-screen() {
    margin-bottom: 8rem;
    .image {
      margin-left: 0;
      max-width: 50%;
    }

    .portfolio-image-desktop {
      max-height: 29vw;
      overflow-y: scroll;
    }

    .portfolio-image-mobile {
      right: initial;
      max-height: 22vw;
      max-width: 10vw;
      overflow-y: scroll;
      left: 5vw;
    }

    .content {
      background: white;
      border-left: 5px solid $clr1;
      bottom: 3vw;
      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
      height: auto;
      margin: auto;
      max-height: 280px;
      overflow: scroll;
      padding: 2rem;
      position: absolute;
      right: 0;
      width: 55%;
    }
  }

  @include wide-screen() {
    .portfolio-image-desktop {
      max-height: 465px;
    }

    .portfolio-image-mobile {
      max-height: 352px;
      max-width: 160px;
      left: 4rem;
    }

    .content {
      bottom: 4rem;
    }
  }
}

.portfolio-cta {
  border-top: 5px solid $clr1;
  text-align: center;
  max-width: 500px;
  margin: 0 auto 4rem;
  padding: 2rem;

  h2 {
    &:after {
      right: 0;
      margin: auto;
    }
  }
}

